Fix SessionClientBinding constructor parameter for immersive.

The idea here is that we have potentially multiple "runtimes" backing a
single VRDisplay for WebVR so we don't need GVR for magic window sessions.

However, that means we have to aggregate multiple display info changes
coming from multiple runtimes and decide which display info the
aggregate device reports.  This flag is used as part of that logic -
mostly we take the presenting display info.

This was a simple copy-paste error that causes us to treat immersive
sessions as non-immersive for these updates.

BUG=897401

Change-Id: If4685282e8756875b85b808aa61aca1e9622cb16
Reviewed-on: https://chromium-review.googlesource.com/c/1295317
Commit-Queue: Bill Orr <billorr@chromium.org>
Reviewed-by: Klaus Weidner <klausw@chromium.org>
Cr-Commit-Position: refs/heads/master@{#602146}