third_party/blink/renderer/modules/vr/vr_display.cc
@@ -96,10 +96,11 @@ class VRDisplayFrameRequestCallback
 
 SessionClientBinding::SessionClientBinding(
     VRDisplay* display,
-    bool is_immersive,
+    SessionClientBinding::SessionBindingType immersive,
     device::mojom::blink::XRSessionClientRequest request)
     : display_(display),
-      is_immersive_(is_immersive),
+      is_immersive_(immersive ==
+                    SessionClientBinding::SessionBindingType::kImmersive),
       client_binding_(this, std::move(request)){};
 
 SessionClientBinding::~SessionClientBinding() = default;
@@ -567,7 +568,8 @@ void VRDisplay::OnRequestImmersiveSessionReturned(
     if (immersive_client_binding_)
       immersive_client_binding_->Close();
     immersive_client_binding_ = new SessionClientBinding(
-        this, false, std::move(session->client_request));
+        this, SessionClientBinding::SessionBindingType::kImmersive,
+        std::move(session->client_request));
 
     Update(std::move(session->display_info));
 
@@ -591,8 +593,9 @@ void VRDisplay::OnNonImmersiveSessionRequestReturned(
     return;
   }
   non_immersive_provider_.Bind(std::move(session->data_provider));
-  non_immersive_client_binding_ =
-      new SessionClientBinding(this, false, std::move(session->client_request));
+  non_immersive_client_binding_ = new SessionClientBinding(
+      this, SessionClientBinding::SessionBindingType::kNonImmersive,
+      std::move(session->client_request));
   RequestVSync();
 }
 
